--- a/portfolio.html
+++ b/portfolio.html
@@ -17,32 +17,32 @@
 
 <body>
     <header class="header">
-        <div class="header-container  container ">
-            <nav class="header-nav">
-                <a href="" class="header-logo link">Web<span class="logo">Studio</span></a>
-                <ul class="header-list list">
-                    <li class="header-item">
-                        <a class="header-link link" href="./index.html">Студия</a>
+        <div class="header__container  container ">
+            <nav class="header__nav">
+                <a href="" class="header__logo link">Web<span class="header__spanlogo">Studio</span></a>
+                <ul class="header__list list">
+                    <li class="header__item">
+                        <a class="header__link link" href="./index.html">Студия</a>
                     </li>
-                    <li class="header-item">
-                        <a class="header-link current link" href="./portfolio.html">Портфолио</a>
+                    <li class="header__item">
+                        <a class="header__link link header__current" href="./portfolio.html">Портфолио</a>
                     </li>
-                    <li class="header-item">
-                        <a class="header-link link" href="">Контакты</a>
+                    <li class="header__item">
+                        <a class="header__link link" href="">Контакты</a>
                     </li>
                 </ul>
             </nav>
-            <ul class="header-list-contacts list">
-                <li class="header-mail">
-                    <a class="header-mail-link link" href="mailto:info@devstudio.com">
-                        <svg class="svg-header" width="16" height="12">
+            <ul class="header__contacts list">
+                <li>
+                    <a class="header__mail link" href="mailto:info@devstudio.com">
+                        <svg class="header__svg" width="16" height="12">
                             <use href="./images/sprite.svg#icon-envelope"></use>
                         </svg>
                         info@devstudio.com</a>
                 </li>
-                <li class="header-tel">
-                    <a class="header-tel-link link" href="+380961111111">
-                        <svg class="svg-header" width="10" height="16">
+                <li>
+                    <a class="header__tel link" href="+380961111111">
+                        <svg class="header__svg" width="10" height="16">
                             <use href="./images/sprite.svg#icon-phone"></use>
                         </svg>
                         +38 096 111 11 11</a>
