Закінчив ВЕМ ДЗ7

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,192 +51,204 @@
         </div>
     </header>
 
-    <main class="main">
+    <main class="projects">
         <div class="container">
         <h2 hidden >Наши работы</h2>
-        <ul class="menu-list  list">
-            <li class="list-btn"> 
-                <button class="btn" type="button">Все</button>
+        <ul class="projects__link  list">
+            <li class="projects-link__item"> 
+                <button class="projects-link__btn" type="button">Все</button>
             </li>
-            <li class="list-btn">
-                <button class="btn" type="button">Веб-сайты</button>
+            <li class="projects-link__item">
+                <button class="projects-link__btn" type="button">Веб-сайты</button>
             </li>
-            <li class="list-btn">
-                <button class="btn" type="button">Приложения</button>
+            <li class="projects-link__item">
+                <button class="projects-link__btn" type="button">Приложения</button>
             </li>
-            <li class="list-btn">
-                <button class="btn" type="button">Дизайн</button>
+            <li class="projects-link__item">
+                <button class="projects-link__btn" type="button">Дизайн</button>
             </li>
-            <li class="list-btn">
-                <button class="btn" type="button">Маркетинг</button>
+            <li class="projects-link__item">
+                <button class="projects-link__btn" type="button">Маркетинг</button>
             </li>
         </ul>
-        <ul class="list-two list">
-            <li class="list-img">
-                <div class="text-hover">
+        <ul class="projects__list list">
+            <li class="projects__item">
+                <div class="projects-item__hover">
                     <img src="./images/work1.jpg" width="370" alt="work1">
-                    <p class="text-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                    <p class="projects-hover__text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                     шпионажа и атак на защищённые сервера конкурентов.</p>
                 </div>
-                <div class="border-list">
-                    <h3 class="title-list">Технокряк</h3>
-                    <p class="text-list">Веб-сайт</p>
+                <div class="projects-item__name">
+                    <h3 class="projects-name__tittle">Технокряк</h3>
+                    <p class="projects-name__text">Веб-сайт</p>
                 </div>  
             </li>
-            <li class="list-img">
-                <div class="text-hover">
+            <li class="projects__item">
+                <div class="projects-item__hover">
                     <img src="./images/work2.jpg" width="370" alt="work2">
-                    <p class="text-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                    <p class="projects-hover__text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                         платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.</p>
                 </div> 
-                <div class="border-list">
-                    <h3 class="title-list">Постер New Orlean vs Golden Star</h3>
-                    <p class="text-list">Дизайн</p>
+                <div class="projects-item__name">
+                    <h3 class="projects-name__tittle">Постер New Orlean vs Golden Star</h3>
+                    <p class="projects-name__text">Дизайн</p>
                 </div>
             </li>
-            <li class="list-img last-right">
-                <div class="text-hover">
+            <li class="projects__item last-right">
+                <div class="projects-item__hover">
                     <img src="./images/work3.jpg" width="370" alt="work3">
-                    <p class="text-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                    <p class="projects-hover__text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                         платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.</p>
                 </div>
-                <div class="border-list">
-                    <h3 class="title-list">Ресторан Seafood</h3>
-                    <p class="text-list">Приложение</p>
+                <div class="projects-item__name">
+                    <h3 class="projects-name__tittle">Ресторан Seafood</h3>
+                    <p class="projects-name__text">Приложение</p>
                 </div>
             </li>
-            <li class="list-img">
-                <div class="text-hover">
+            <li class="projects__item">
+                <div class="projects-item__hover">
                     <img src="./images/work4.jpg" width="370" alt="work4">
-                    <p class="text-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                    <p class="projects-hover__text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                         платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.</p>
                 </div>
-                <div class="border-list">
-                    <h3 class="title-list">Проект Prime</h3>
-                    <p class="text-list">Маркетинг</p>
+                <div class="projects-item__name">
+                    <h3 class="projects-name__tittle">Проект Prime</h3>
+                    <p class="projects-name__text">Маркетинг</p>
                 </div>
             </li>
-            <li class="list-img">
-                <div class="text-hover">
+            <li class="projects__item">
+                <div class="projects-item__hover">
                     <img src="./images/work5.jpg" width="370" alt="work5">
-                    <p class="text-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                    <p class="projects-hover__text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                         платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.</p>
                 </div>
-                <div class="border-list">
-                    <h3 class="title-list">Проект Boxes</h3>
-                    <p class="text-list">Приложение</p>
+                <div class="projects-item__name">
+                    <h3 class="projects-name__tittle">Проект Boxes</h3>
+                    <p class="projects-name__text">Приложение</p>
                 </div>
             </li>
-            <li class="list-img last-right">
-                <div class="text-hover">
+            <li class="projects__item last-right">
+                <div class="projects-item__hover">
                     <img src="./images/work6.jpg" width="370" alt="work6">
-                    <p class="text-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                    <p class="projects-hover__text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                         платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.</p>
                 </div>
-                <div class="border-list">
-                    <h3 class="title-list" lang="en">Inspiration has no Borders</h3>
-                    <p class="text-list">Веб-сайт</p>
+                <div class="projects-item__name">
+                    <h3 class="projects-name__tittle" lang="en">Inspiration has no Borders</h3>
+                    <p class="projects-name__text">Веб-сайт</p>
                 </div>
             </li>
-            <li class="list-img last-bottom">
-                <div class="text-hover">
+            <li class="projects__item last-bottom">
+                <div class="projects-item__hover">
                     <img src="./images/work7.jpg" width="370" alt="work7">
-                    <p class="text-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                    <p class="projects-hover__text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                         платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.</p>
                 </div>
-                <div class="border-list">
-                    <h3 class="title-list">Издание Limited Edition</h3>
-                    <p class="text-list">Дизайн</p>
+                <div class="projects-item__name">
+                    <h3 class="projects-name__tittle">Издание Limited Edition</h3>
+                    <p class="projects-name__text">Дизайн</p>
                 </div>
             </li>
-            <li class="list-img last-bottom">
-                <div class="text-hover">
+            <li class="projects__item last-bottom">
+                <div class="projects-item__hover">
                     <img src="./images/work8.jpg" width="370" alt="work8">
-                    <p class="text-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                    <p class="projects-hover__text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                         платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.</p>
                 </div>
-                <div class="border-list">
-                    <h3 class="title-list">Проект LAB</h3>
-                    <p class="text-list">Маркетинг</p>
+                <div class="projects-item__name">
+                    <h3 class="projects-name__tittle">Проект LAB</h3>
+                    <p class="projects-name__text">Маркетинг</p>
                 </div>
             </li>
-            <li class="list-img last-bottom last-right">
-                <div class="text-hover">
+            <li class="projects__item last-bottom last-right">
+                <div class="projects-item__hover">
                     <img src="./images/work9.jpg" width="370" alt="work9">
-                    <p class="text-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                    <p class="projects-hover__text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                         платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.</p>
                 </div>
-                <div class="border-list">
-                    <h3 class="title-list" lang="en">Growing Business</h3>
-                    <p class="text-list">Приложение</p>
+                <div class="projects-item__name">
+                    <h3 class="projects-name__tittle" lang="en">Growing Business</h3>
+                    <p class="projects-name__text">Приложение</p>
                 </div>
             </li>
         </ul>
         </div>
     </main>
 
-        <footer class="footer-page">
-            -
-            <div class="container">
-                <a class="header-logo link" href="">Web<span class="logo-two">Studio</span></a>
-                <div class="footer-divs">
-                    <address>
-                        <ul class="footer-list list">
-                            <li>
-                                <a class="footer-link link" href="">г. Киев, пр-т Леси Украинки, 26</a>
-                            </li>
-                            <li>
-                                <a class="footer-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                            </li>
-                            <li>
-                                <a class="footer-link link" href="+380961111111">+38 096 111 11 11</a>
-                            </li>
-                        </ul>
-                    </address>
-                    <div class="footer-div">
-                        <h3 class="footer-tittle-social">ПРИСОЕДИНЯЙТЕСЬ</h3>
-                        <ul class="footer-list-social link list">
-                            <li class="footer-two">
-                                <a class="footer-link-two link" href="">
-                                    <svg class="footer">
-                                        <use href="./images/sprite.svg#icon-instagram"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="footer-two">
-                                <a class="footer-link-two link" href="">
-                                    <svg class="footer">
-                                        <use href="./images/sprite.svg#icon-twitter"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="footer-two">
-                                <a class="footer-link-two link" href="">
-                                    <svg class="footer">
-                                        <use href="./images/sprite.svg#icon-facebook"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="footer-two">
-                                <a class="footer-link-two link" href="">
-                                    <svg class="footer">
-                                        <use href="./images/sprite.svg#icon-linkedin"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
+    <footer class="footer">
+        -
+        <div class="container">
+            <a href="" class="footer__logo link">Web<span class="footer__spanlogo">Studio</span></a>
+            <div class="footer__contacts">
+                <address>
+                    <ul class="footer-contacts__list list">
+                        <li>
+                            <a class="footer__link link" href="">г. Киев, пр-т Леси Украинки, 26</a>
+                        </li>
+                        <li>
+                            <a class="footer__link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        </li>
+                        <li>
+                            <a class="footer__link link" href="+380961111111">+38 096 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+                <div class="footer__social">
+                    <h3 class="footer-social__tittle">ПРИСОЕДИНЯЙТЕСЬ</h3>
+                    <ul class="footer-social__list list">
+                        <li class="footer-social__item">
+                            <a class="footer-social__link link" href="">
+                                <svg class="footer-social__icon">
+                                    <use href="./images/sprite.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-social__item">
+                            <a class="footer-social__link link" href="">
+                                <svg class="footer-social__icon">
+                                    <use href="./images/sprite.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-social__item">
+                            <a class="footer-social__link link" href="">
+                                <svg class="footer-social__icon">
+                                    <use href="./images/sprite.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-social__item">
+                            <a class="footer-social__link link" href="">
+                                <svg class="footer-social__icon">
+                                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__subscribe">
+                    <p class="footer-subscribe__tittle">ПОДПИШИТЕСЬ НА РАССЫЛКУ</p>
+                    <form action="">
+                        <div>
+                            <input type="email" name="email" id="email" placeholder="E-mail"
+                                class="footer-subscribe__input">
+                            <button type="submit" class="footer-subscribe__btn"><span
+                                    class="footer-btn__icon">Подписаться</span> </button>
+                        </div>
+                    </form>
                 </div>
             </div>
-        </footer>
+        </div>
+    </footer>
+
         <script src="./js/modal.js"></script>
 
 </body>
